//將路途圖示和籌碼的雪碧圖改成響應式

--- a/src/assets/css/all.scss
+++ b/src/assets/css/all.scss
@@ -12,8 +12,9 @@
 @import './scss/layout/footer';
 //component
 @import './scss/components/buttom';
-@import './scss//components//coin';
+@import './scss/components/coin';
 @import './scss/components/historyRoad';
+@import './scss//components/loading';
 
 //rwd
 @import './scss/rwd/rwd';
