--- a/src/assets/css/scss/base/_variable.scss
+++ b/src/assets/css/scss/base/_variable.scss
@@ -7,7 +7,10 @@ $betArea_red:#bd0505;
 //注意這裡的路徑要放引用的SCSS檔案的相對路徑
 //網站圖片
 $body-bg-img:url('../../images/body-bg.png');
+//loading的圖檔
+$loading-img:url('../../images/loading.svg');
 //coin序列圖
 $coin-spriteImg:url('../../images/coin.png');
 //路圖序列圖
-$historyRoad-spriteImg:url('../../images/road-sprite.png')
+$historyRoad-spriteImg:url('../../images/road-sprite.png');
+
