--- a/src/assets/css/scss/rwd/_rwd.scss
+++ b/src/assets/css/scss/rwd/_rwd.scss
@@ -115,9 +115,35 @@
 	.betArea-mobile-container{
 		height:280px;
 	}
-	.coin{
-		transform: scale(1.7);
-		// zoom:1.7;
+	.coin-menu1{
+		@include coinSpritePosition(0,0,1.7)
+	}
+	.coin-menu1:hover,.coin-menu1-current{
+		@include coinSpritePosition(0,-65,1.7)
+	}
+	.coin-menu2{
+		@include coinSpritePosition(-79,0,1.7)
+	}
+	.coin-menu2:hover,.coin-menu2-current{
+		@include coinSpritePosition(-79,-65,1.7)
+	}
+	.coin-menu3{
+		@include coinSpritePosition(-158,0,1.7)
+	}
+	.coin-menu3:hover,.coin-menu3-current{
+		@include coinSpritePosition(-158,-65,1.7)
+	}
+	.coin-menu4{
+		@include coinSpritePosition(-237,0,1.7)
+	}
+	.coin-menu4:hover,.coin-menu4-current{
+		@include coinSpritePosition(-237,-65,1.7)
+	}
+	.coin-menu5{
+		@include coinSpritePosition(-316,0,1.7)
+	}
+	.coin-menu5:hover,.coin-menu5-current{
+		@include coinSpritePosition(-316,-65,1.7)
 	}
 	.betArea-item {
 		font-size: 2.5rem;
@@ -136,6 +162,63 @@
 	}
 	.tabsArea{
 		display: none;
+	}
+	.bankerRoadIcon0{
+		@include hisRoadSpritePosition(0,0,0.35);
+	}
+	.bankerRoadIcon1{
+		@include hisRoadSpritePosition(-100,0,0.35);
+	}
+	.bankerRoadIcon2{
+		@include hisRoadSpritePosition(-200,0,0.35);
+	}
+	.bankerRoadIcon3{
+		@include hisRoadSpritePosition(-300,0,0.35);
+	}
+	.bankerRoadIcon4{
+		@include hisRoadSpritePosition(-400,0,0.35);
+	}
+	.bankerRoadIcon5{
+		@include hisRoadSpritePosition(-500,0,0.35);
+	}
+	.bankerRoadIcon6{
+		@include hisRoadSpritePosition(-600,0,0.35);
+	}
+	.bankerRoadIcon7{
+		@include hisRoadSpritePosition(-700,0,0.35);
+	}
+	.bankerRoadIcon8{
+		@include hisRoadSpritePosition(-800,0,0.35);
+	}
+	.playerRoadIcon0{
+		@include hisRoadSpritePosition(-900,0,0.35);
+	}
+	.playerRoadIcon1{
+		@include hisRoadSpritePosition(-1000,0,0.35);
+	}
+	.playerRoadIcon2{
+		@include hisRoadSpritePosition(-1100,0,0.35);
+	}
+	.playerRoadIcon3{
+		@include hisRoadSpritePosition(-1200,0,0.35);
+	}
+	.playerRoadIcon4{
+		@include hisRoadSpritePosition(-1300,0,0.35);
+	}
+	.playerRoadIcon5{
+		@include hisRoadSpritePosition(-1400,0,0.35);
+	}
+	.playerRoadIcon6{
+		@include hisRoadSpritePosition(-1500,0,0.35);
+	}
+	.playerRoadIcon7{
+		@include hisRoadSpritePosition(-1600,0,0.35);
+	}
+	.playerRoadIcon8{
+		@include hisRoadSpritePosition(-1700,0,0.35);
+	}
+	.tieRoadIcon{
+		@include hisRoadSpritePosition(-1800,0,0.35);
 	}
 }
 
@@ -172,9 +255,62 @@
 	.betArea-item {
 		font-size: 2rem;
 	}
-	.coin{
-		transform: scale(1.2);
-		// zoom:1.2;
+	.bankerRoadIcon0{
+		@include hisRoadSpritePosition(0,0,0.3);
+	}
+	.bankerRoadIcon1{
+		@include hisRoadSpritePosition(-100,0,0.3);
+	}
+	.bankerRoadIcon2{
+		@include hisRoadSpritePosition(-200,0,0.3);
+	}
+	.bankerRoadIcon3{
+		@include hisRoadSpritePosition(-300,0,0.3);
+	}
+	.bankerRoadIcon4{
+		@include hisRoadSpritePosition(-400,0,0.3);
+	}
+	.bankerRoadIcon5{
+		@include hisRoadSpritePosition(-500,0,0.3);
+	}
+	.bankerRoadIcon6{
+		@include hisRoadSpritePosition(-600,0,0.3);
+	}
+	.bankerRoadIcon7{
+		@include hisRoadSpritePosition(-700,0,0.3);
+	}
+	.bankerRoadIcon8{
+		@include hisRoadSpritePosition(-800,0,0.3);
+	}
+	.playerRoadIcon0{
+		@include hisRoadSpritePosition(-900,0,0.3);
+	}
+	.playerRoadIcon1{
+		@include hisRoadSpritePosition(-1000,0,0.3);
+	}
+	.playerRoadIcon2{
+		@include hisRoadSpritePosition(-1100,0,0.3);
+	}
+	.playerRoadIcon3{
+		@include hisRoadSpritePosition(-1200,0,0.3);
+	}
+	.playerRoadIcon4{
+		@include hisRoadSpritePosition(-1300,0,0.3);
+	}
+	.playerRoadIcon5{
+		@include hisRoadSpritePosition(-1400,0,0.3);
+	}
+	.playerRoadIcon6{
+		@include hisRoadSpritePosition(-1500,0,0.3);
+	}
+	.playerRoadIcon7{
+		@include hisRoadSpritePosition(-1600,0,0.3);
+	}
+	.playerRoadIcon8{
+		@include hisRoadSpritePosition(-1700,0,0.3);
+	}
+	.tieRoadIcon{
+		@include hisRoadSpritePosition(-1800,0,0.3);
 	}
 }
 @media screen and (max-width: 414px) {
@@ -203,9 +339,35 @@
 			font-size: 1.2rem;
 			flex:auto;
 		}
-		.coin{
-			transform: scale(0.9);
-			// zoom:0.9;
+		.coin-menu1{
+			@include coinSpritePosition(0,0,0.9)
+		}
+		.coin-menu1:hover,.coin-menu1-current{
+			@include coinSpritePosition(0,-65,0.9)
+		}
+		.coin-menu2{
+			@include coinSpritePosition(-79,0,0.9)
+		}
+		.coin-menu2:hover,.coin-menu2-current{
+			@include coinSpritePosition(-79,-65,0.9)
+		}
+		.coin-menu3{
+			@include coinSpritePosition(-158,0,0.9)
+		}
+		.coin-menu3:hover,.coin-menu3-current{
+			@include coinSpritePosition(-158,-65,0.9)
+		}
+		.coin-menu4{
+			@include coinSpritePosition(-237,0,0.9)
+		}
+		.coin-menu4:hover,.coin-menu4-current{
+			@include coinSpritePosition(-237,-65,0.9)
+		}
+		.coin-menu5{
+			@include coinSpritePosition(-316,0,0.9)
+		}
+		.coin-menu5:hover,.coin-menu5-current{
+			@include coinSpritePosition(-316,-65,0.9)
 		}
 		.ammo5{
             left:-200px !important;
@@ -238,8 +400,62 @@
 			font-size: 2.6rem;
 			top:2px;
 		}
-		.btn-p{
-			zoom:0.15;
+		.bankerRoadIcon0{
+			@include hisRoadSpritePosition(0,0,0.15);
+		}
+		.bankerRoadIcon1{
+			@include hisRoadSpritePosition(-100,0,0.15);
+		}
+		.bankerRoadIcon2{
+			@include hisRoadSpritePosition(-200,0,0.15);
+		}
+		.bankerRoadIcon3{
+			@include hisRoadSpritePosition(-300,0,0.15);
+		}
+		.bankerRoadIcon4{
+			@include hisRoadSpritePosition(-400,0,0.15);
+		}
+		.bankerRoadIcon5{
+			@include hisRoadSpritePosition(-500,0,0.15);
+		}
+		.bankerRoadIcon6{
+			@include hisRoadSpritePosition(-600,0,0.15);
+		}
+		.bankerRoadIcon7{
+			@include hisRoadSpritePosition(-700,0,0.15);
+		}
+		.bankerRoadIcon8{
+			@include hisRoadSpritePosition(-800,0,0.15);
+		}
+		.playerRoadIcon0{
+			@include hisRoadSpritePosition(-900,0,0.15);
+		}
+		.playerRoadIcon1{
+			@include hisRoadSpritePosition(-1000,0,0.15);
+		}
+		.playerRoadIcon2{
+			@include hisRoadSpritePosition(-1100,0,0.15);
+		}
+		.playerRoadIcon3{
+			@include hisRoadSpritePosition(-1200,0,0.15);
+		}
+		.playerRoadIcon4{
+			@include hisRoadSpritePosition(-1300,0,0.15);
+		}
+		.playerRoadIcon5{
+			@include hisRoadSpritePosition(-1400,0,0.15);
+		}
+		.playerRoadIcon6{
+			@include hisRoadSpritePosition(-1500,0,0.15);
+		}
+		.playerRoadIcon7{
+			@include hisRoadSpritePosition(-1600,0,0.15);
+		}
+		.playerRoadIcon8{
+			@include hisRoadSpritePosition(-1700,0,0.15);
+		}
+		.tieRoadIcon{
+			@include hisRoadSpritePosition(-1800,0,0.15);
 		}
 }
 @media screen and (max-width: 375px) {
@@ -254,10 +470,6 @@
 		}
 		.betArea-mobile-container{
 			height:179px;
-		}
-		.coin{
-			transform: scale(0.8);
-			// zoom:0.8;
 		}
 		.caritem{
 			// transform: scale(0.15);
