--- a/src/assets/css/all.scss
+++ b/src/assets/css/all.scss
@@ -15,6 +15,7 @@
 @import './scss/components/coin';
 @import './scss/components/historyRoad';
 @import './scss//components/loading';
+@import './scss/components/poker';
 
 //rwd
 @import './scss/rwd/rwd';
